# terminal

./: Cargo.toml  Makefile  README.md
examples/: sync.rs
src/: lib.rs  terminfo.rs
src/terminfo/: known_overrides.rs  mod.rs
src/terminfo/parameterized/: eval.rs  mod.rs  parse.rs
